Replace Door with actual door type in creator msgs